# Silly-Finger

./: .gitignore  CMakeLists.txt  README.md
res/: mainwidget.ui
samples/: backen.smpl  djaba.smpl  kk.smpl  nav_ogni.smpl  planer.smpl  planernoe_ruzye.smpl  pulsar.smpl  svetofor.smpl  thcnasy.smpl  vertushka.smpl
src/: LifeWidget.cpp  LifeWidget.h  MainWidget.cpp  MainWidget.h  main.cpp
